# Spirit_humanoid_project

./: Darwin.md  ReadMe.md  docs.md
IsaacLab_Environments/: readme.md
OpenRB_Firmware/mx28_bulk_teaching/: mx28_bulk_teaching.ino
OpenRB_Firmware/xl330_bulk_teaching/: xl330_bulk_teaching.ino
ROS2_Package/: trajectory_controller.py
ROS2_Package/darwin_robot/: CMakeLists.txt  package.xml
ROS2_Package/darwin_robot/behaviors/: confident.txt  greet.txt  hello.txt  sample.txt  sun.txt  surprise.txt
ROS2_Package/darwin_robot/checkpoint/: cuda_dreamwaq_policy.pt  cuda_dreamwaq_policy2.pt  dreamwaq_policy.pt  dreamwaq_policy_cuda.pt  exported_script.pt  policy.pt  policy_h1.pt
ROS2_Package/darwin_robot/include/joint_control/: torchscript.hpp
ROS2_Package/darwin_robot/launch/: bringup.launch.py  gazebo_sim.launch.py  gz_fortress.launch.py  inference_service.launch.py  joint_controller.launch.py  tcpip_inference.launch.py  teleop_joy.launch.py
ROS2_Package/darwin_robot/meshes/: inertia.py
ROS2_Package/darwin_robot/params/: controller.yaml  gazebo_ros_bridge.yaml  joint_config.yaml  teleop_ps5.yaml
ROS2_Package/darwin_robot/scripts/: launch_isaacsim.py  openRB_topic.py  openRB_traj.py  packet_handler.py  test_joint_trajecotry.py  test_service.py  trajectory_controller.py
ROS2_Package/darwin_robot/src/: dreamwaq_inference_service.cpp  dreamwaq_inference_tcp_ip.cpp  inference_service.cpp  test_joint_command.cpp  torchscript.cpp
ROS2_Package/darwin_robot/urdf/: darwin.sdf  darwin.urdf  darwin.urdf.xacro  darwin_inertia_fixed.urdf.xacro  joint_idx.py
ROS2_Package/darwin_robot/urdf/darwin/: darwin.usd
ROS2_Package/darwin_robot/urdf/darwin/configuration/: darwin_physics.usd  darwin_sensor.usd
ROS2_Package/hri_humanoid_interfaces/: CMakeLists.txt  package.xml
ROS2_Package/hri_humanoid_interfaces/srv/: GetActions.srv
